--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prettier": "prettier -c --write src"
+    "prettier": "prettier -c --write src",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -47,6 +49,15 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^2.0.5"
+    "@babel/core": "^7.11.1",
+    "@storybook/addon-actions": "^6.0.10",
+    "@storybook/addon-essentials": "^6.0.10",
+    "@storybook/addon-links": "^6.0.10",
+    "@storybook/node-logger": "^6.0.10",
+    "@storybook/preset-create-react-app": "^3.1.4",
+    "@storybook/react": "^6.0.10",
+    "babel-loader": "^8.1.0",
+    "prettier": "^2.0.5",
+    "react-is": "^16.13.1"
   }
 }
